@@ -23,10 +23,8 @@ import java.net.URI;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.inject.Named;
-import javax.inject.Singleton;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Response;
 
@@ -45,13 +43,12 @@ import org.xwiki.rest.model.jaxb.Link;
 
 /**
  * Default implementation of {@link LiveDataPropertiesResource}.
- * 
+ *
  * @version $Id$
  * @since 12.10
  */
 @Component
 @Named("org.xwiki.livedata.internal.rest.DefaultLiveDataPropertiesResource")
-@Singleton
 public class DefaultLiveDataPropertiesResource extends AbstractLiveDataResource implements LiveDataPropertiesResource
 {
     @Override
@@ -76,7 +73,7 @@ public class DefaultLiveDataPropertiesResource extends AbstractLiveDataResource 
 
         List<PropertyDescriptor> properties = propertyDescriptors.stream()
             .map(propertyDescriptor -> createPropertyType(propertyDescriptor, source, namespace))
-            .collect(Collectors.toList());
+            .toList();
         return (Properties) new Properties().withProperties(properties).withLinks(self, parent);
     }
 
