@@ -22,10 +22,8 @@ package org.xwiki.livedata.internal.rest;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.inject.Named;
-import javax.inject.Singleton;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Response;
 
@@ -38,13 +36,12 @@ import org.xwiki.rest.model.jaxb.Link;
 
 /**
  * Default implementation of {@link LiveDataSourcesResource}.
- * 
+ *
  * @version $Id$
  * @since 12.10
  */
 @Component
 @Named("org.xwiki.livedata.internal.rest.DefaultLiveDataSourcesResource")
-@Singleton
 public class DefaultLiveDataSourcesResource extends AbstractLiveDataResource implements LiveDataSourcesResource
 {
     @Override
@@ -55,7 +52,7 @@ public class DefaultLiveDataSourcesResource extends AbstractLiveDataResource imp
             Link self = new Link().withRel(Relations.SELF).withHref(this.uriInfo.getAbsolutePath().toString());
 
             List<Source> sources = sourceIds.get().stream().map(this::getLiveDataQuerySource)
-                .map(querySource -> createSource(querySource, namespace)).collect(Collectors.toList());
+                .map(querySource -> createSource(querySource, namespace)).toList();
             return (Sources) new Sources().withSources(sources).withLinks(self);
         } else {
             throw new WebApplicationException(Response.Status.NOT_FOUND);
