@@ -19,7 +19,7 @@
  */
 package org.xwiki.notifications.filters.internal.minor;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.xwiki.eventstream.Event;
@@ -65,9 +65,9 @@ class MinorEventEmailNotificationFilterTest
         NotificationPreference fakePreference = mock(NotificationPreference.class);
 
         DocumentReference randomUser = new DocumentReference("xwiki", "XWiki", "UserA");
-        assertNull(this.filter.filterExpression(randomUser, Collections.emptyList(), fakePreference));
+        assertNull(this.filter.filterExpression(randomUser, List.of(), fakePreference));
         assertEquals("NOT ((TYPE = \"update\" AND NOT (DOCUMENT_VERSION ENDS WITH \".1\")))",
-                this.filter.filterExpression(randomUser, Collections.emptyList(),
+                this.filter.filterExpression(randomUser, List.of(),
                         NotificationFilterType.EXCLUSIVE,
                         NotificationFormat.EMAIL).toString());
     }
@@ -76,9 +76,9 @@ class MinorEventEmailNotificationFilterTest
     void filterExpressionWithWrongParameters() throws Exception
     {
         DocumentReference randomUser = new DocumentReference("xwiki", "XWiki", "UserA");
-        assertNull(this.filter.filterExpression(randomUser, Collections.emptyList(),
+        assertNull(this.filter.filterExpression(randomUser, List.of(),
                 NotificationFilterType.INCLUSIVE, NotificationFormat.EMAIL));
-        assertNull(this.filter.filterExpression(randomUser, Collections.emptyList(),
+        assertNull(this.filter.filterExpression(randomUser, List.of(),
                 NotificationFilterType.INCLUSIVE, NotificationFormat.ALERT));
     }
 
@@ -96,16 +96,16 @@ class MinorEventEmailNotificationFilterTest
         when(event3.getType()).thenReturn("update");
         when(event3.getDocumentVersion()).thenReturn("2.1");
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-            this.filter.filterEvent(event1, randomUser, Collections.emptyList(),
+            this.filter.filterEvent(event1, randomUser, List.of(),
                 NotificationFormat.ALERT));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-            this.filter.filterEvent(event1, randomUser, Collections.emptyList(),
+            this.filter.filterEvent(event1, randomUser, List.of(),
                 NotificationFormat.EMAIL));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-            this.filter.filterEvent(event2, randomUser, Collections.emptyList(),
+            this.filter.filterEvent(event2, randomUser, List.of(),
                 NotificationFormat.EMAIL));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-            this.filter.filterEvent(event3, randomUser, Collections.emptyList(),
+            this.filter.filterEvent(event3, randomUser, List.of(),
                 NotificationFormat.EMAIL));
     }
 }
