@@ -21,7 +21,6 @@ package org.xwiki.query.solr.internal;
 
 import java.lang.reflect.Array;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
 
@@ -42,8 +41,8 @@ import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.DocumentReferenceResolver;
 import org.xwiki.query.Query;
 import org.xwiki.query.QueryException;
-import org.xwiki.query.QueryExecutor;
 import org.xwiki.query.SecureQuery;
+import org.xwiki.query.internal.AbstractQueryExecutor;
 import org.xwiki.search.solr.internal.api.SolrInstance;
 import org.xwiki.security.authorization.AuthorizationManager;
 import org.xwiki.security.authorization.Right;
@@ -62,7 +61,7 @@ import com.xpn.xwiki.XWikiContext;
 @Component
 @Named(SolrQueryExecutor.SOLR)
 @Singleton
-public class SolrQueryExecutor implements QueryExecutor
+public class SolrQueryExecutor extends AbstractQueryExecutor
 {
     /**
      * Query language ID.
@@ -106,6 +105,7 @@ public class SolrQueryExecutor implements QueryExecutor
     private JobProgressManager progress;
 
     @Override
+    @SuppressWarnings("unchecked")
     public <T> List<T> execute(Query query) throws QueryException
     {
         this.progress.startStep(query, "query.solr.progress.execute", "Execute Solr query [{}]", query);
@@ -114,7 +114,7 @@ public class SolrQueryExecutor implements QueryExecutor
         try {
             this.progress.startStep(query, "query.solr.progress.execute.prepare", "Prepare");
 
-            SolrQuery solrQuery = createSolrQuery(query);
+            SolrQuery solrQuery = createSolrQuery(filterQuery(query, SOLR));
 
             this.progress.startStep(query, "query.solr.progress.execute.execute", "Execute");
 
@@ -128,13 +128,12 @@ public class SolrQueryExecutor implements QueryExecutor
             // information (facets, highlighting, maxScore, etc.) is still relevant.
             // A better way would be using a PostFilter as described in this article:
             // http://java.dzone.com/articles/custom-security-filtering-solr
-            // Basically, we would be asking
             List<DocumentReference> usersToCheck = new ArrayList<>(2);
-            if (query instanceof SecureQuery) {
-                if (((SecureQuery) query).isCurrentUserChecked()) {
+            if (query instanceof SecureQuery secureQuery) {
+                if (secureQuery.isCurrentUserChecked()) {
                     usersToCheck.add(xcontextProvider.get().getUserReference());
                 }
-                if (((SecureQuery) query).isCurrentAuthorChecked()) {
+                if (secureQuery.isCurrentAuthorChecked()) {
                     usersToCheck.add(xcontextProvider.get().getAuthorReference());
                 }
             } else {
@@ -145,7 +144,7 @@ public class SolrQueryExecutor implements QueryExecutor
                 filterResponse(response, usersToCheck);
             }
 
-            return (List<T>) Arrays.asList(response);
+            return filterResults(query, (List<T>) List.of(response));
         } catch (Exception e) {
             throw new QueryException("Exception while executing query", query, e);
         } finally {
@@ -172,8 +171,8 @@ public class SolrQueryExecutor implements QueryExecutor
         for (Entry<String, Object> entry : query.getNamedParameters().entrySet()) {
             Object value = entry.getValue();
 
-            if (value instanceof Iterable) {
-                solrQuery.set(entry.getKey(), toStringArray((Iterable) value));
+            if (value instanceof Iterable iterable) {
+                solrQuery.set(entry.getKey(), toStringArray(iterable));
             } else if (value != null && value.getClass().isArray()) {
                 solrQuery.set(entry.getKey(), toStringArray(value));
             } else {
@@ -218,7 +217,7 @@ public class SolrQueryExecutor implements QueryExecutor
      */
     private String[] toStringArray(Iterable iterable)
     {
-        List<String> args = new ArrayList<String>();
+        List<String> args = new ArrayList<>();
         for (Object obj : iterable) {
             args.add(String.valueOf(obj));
         }
