@@ -19,12 +19,13 @@
  */
 package org.xwiki.webjars;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.xwiki.webjars.internal.WebJarsResourceReference;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 /**
  * Unit tests for {@link org.xwiki.webjars.internal.WebJarsResourceReference}.
@@ -32,30 +33,30 @@ import static org.junit.Assert.*;
  * @version $Id$
  * @since 7.1M1
  */
-public class WebJarResourceReferenceTest
+class WebJarResourceReferenceTest
 {
     @Test
-    public void testEqualsAndHashCode()
+    void equalsAndHashCode()
     {
-        WebJarsResourceReference reference1 = new WebJarsResourceReference("namespace", Arrays.asList("one", "two"));
+        WebJarsResourceReference reference1 = new WebJarsResourceReference("namespace", List.of("one", "two"));
         reference1.addParameter("key1", "value1");
         reference1.addParameter("key2", new String[]{ "value2", "value3" });
 
-        WebJarsResourceReference reference2 = new WebJarsResourceReference("namespace", Arrays.asList("one", "two"));
+        WebJarsResourceReference reference2 = new WebJarsResourceReference("namespace", List.of("one", "two"));
         reference2.addParameter("key1", "value1");
         reference2.addParameter("key2", new String[]{ "value2", "value3" });
 
-        WebJarsResourceReference reference3 = new WebJarsResourceReference("namespace", Arrays.asList("one", "two"));
+        WebJarsResourceReference reference3 = new WebJarsResourceReference("namespace", List.of("one", "two"));
 
-        WebJarsResourceReference reference4 = new WebJarsResourceReference("namespace2", Arrays.asList("one", "two"));
+        WebJarsResourceReference reference4 = new WebJarsResourceReference("namespace2", List.of("one", "two"));
 
         assertEquals(reference2, reference1);
         assertEquals(reference2.hashCode(), reference1.hashCode());
 
-        assertFalse(reference3.equals(reference1));
-        assertFalse(reference3.hashCode() == reference1.hashCode());
+        assertNotEquals(reference3, reference1);
+        assertNotEquals(reference3.hashCode(), reference1.hashCode());
 
-        assertFalse(reference4.equals(reference3));
-        assertFalse(reference4.hashCode() == reference3.hashCode());
+        assertNotEquals(reference4, reference3);
+        assertNotEquals(reference4.hashCode(), reference3.hashCode());
     }
 }
